0.2.0 (trunk)
- Add combinators for triples
- Rename base type-classes
- Expose more useful type-classes generators
- Add base combinators for all the type-classes
- Expose Reader.parse_error

0.1.0 (2014-10-26)
- Initial release