@@ -1,4 +1,7 @@
 0.2.0 (trunk)
+- Rename I0, I1, I2, I3 to S0, S1, S2 and S3
+- Expose value combinators (to mirror the functor combinators)
+- Remove dependency to camlp4
 - Add combinators for triples
 - Rename base type-classes
 - Expose more useful type-classes generators
